stlParser.py
# Generated from stl.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class stlParser ( Parser ):

    grammarFileName = "stl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'|'", "'-'", "'+'", "'*'", "'/'", "'.'", "'>'", "'>='", 
                     "'<'", "'<='", "'='", "'!='", "'\u00E2\u2014\u0160'", 
                     "'\u00E2\u2013\u00A1'", "'U'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\u00E2\u2020\u2019'", "'->'", "'=>'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "','" ]

    symbolicNames = [ "<INVALID>", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_CURLY", 
                      "CLOSE_CURLY", "OPEN_SQUARE", "CLOSE_SQUARE", "PIPELINE", 
                      "MINUS", "PLUS", "STAR", "FORWARD_SLASH", "DOT", "LARGER_THAN", 
                      "LARGER_THAN_OR_EQUAL", "SMALLER_THAN", "SMALLER_THAN_OR_EQUAL", 
                      "EQUALS", "UNEQUALS", "DIAMOND", "SQUARE", "UNTIL", 
                      "AND", "OR", "NEGATE", "ARROW", "SIGNLE_ARROW", "DOUBLE_ARROW", 
                      "DIGIT", "WHITE_SPACE", "SIGNAL", "COMMA" ]

    RULE_content = 0
    RULE_formula = 1
    RULE_signalExpression = 2
    RULE_expression = 3
    RULE_constant = 4
    RULE_intValue = 5
    RULE_floatValue = 6

    ruleNames =  [ "content", "formula", "signalExpression", "expression", 
                   "constant", "intValue", "floatValue" ]

    EOF = Token.EOF
    OPEN_BRACKET=1
    CLOSE_BRACKET=2
    OPEN_CURLY=3
    CLOSE_CURLY=4
    OPEN_SQUARE=5
    CLOSE_SQUARE=6
    PIPELINE=7
    MINUS=8
    PLUS=9
    STAR=10
    FORWARD_SLASH=11
    DOT=12
    LARGER_THAN=13
    LARGER_THAN_OR_EQUAL=14
    SMALLER_THAN=15
    SMALLER_THAN_OR_EQUAL=16
    EQUALS=17
    UNEQUALS=18
    DIAMOND=19
    SQUARE=20
    UNTIL=21
    AND=22
    OR=23
    NEGATE=24
    ARROW=25
    SIGNLE_ARROW=26
    DOUBLE_ARROW=27
    DIGIT=28
    WHITE_SPACE=29
    SIGNAL=30
    COMMA=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ContentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formula(self):
            return self.getTypedRuleContext(stlParser.FormulaContext,0)


        def EOF(self):
            return self.getToken(stlParser.EOF, 0)

        def getRuleIndex(self):
            return stlParser.RULE_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContent" ):
                return visitor.visitContent(self)
            else:
                return visitor.visitChildren(self)




    def content(self):

        localctx = stlParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_content)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.formula(0)
            self.state = 15
            self.match(stlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlParser.RULE_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AlwaysContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_CURLY(self):
            return self.getToken(stlParser.OPEN_CURLY, 0)
        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.ConstantContext)
            else:
                return self.getTypedRuleContext(stlParser.ConstantContext,i)

        def COMMA(self):
            return self.getToken(stlParser.COMMA, 0)
        def CLOSE_CURLY(self):
            return self.getToken(stlParser.CLOSE_CURLY, 0)
        def formula(self):
            return self.getTypedRuleContext(stlParser.FormulaContext,0)

        def OPEN_SQUARE(self):
            return self.getToken(stlParser.OPEN_SQUARE, 0)
        def CLOSE_SQUARE(self):
            return self.getToken(stlParser.CLOSE_SQUARE, 0)
        def SQUARE(self):
            return self.getToken(stlParser.SQUARE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlways" ):
                listener.enterAlways(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlways" ):
                listener.exitAlways(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlways" ):
                return visitor.visitAlways(self)
            else:
                return visitor.visitChildren(self)


    class BooleanFilterContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_BRACKET(self):
            return self.getToken(stlParser.OPEN_BRACKET, 0)
        def signalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.SignalExpressionContext)
            else:
                return self.getTypedRuleContext(stlParser.SignalExpressionContext,i)

        def CLOSE_BRACKET(self):
            return self.getToken(stlParser.CLOSE_BRACKET, 0)
        def LARGER_THAN(self):
            return self.getToken(stlParser.LARGER_THAN, 0)
        def SMALLER_THAN(self):
            return self.getToken(stlParser.SMALLER_THAN, 0)
        def EQUALS(self):
            return self.getToken(stlParser.EQUALS, 0)
        def UNEQUALS(self):
            return self.getToken(stlParser.UNEQUALS, 0)
        def LARGER_THAN_OR_EQUAL(self):
            return self.getToken(stlParser.LARGER_THAN_OR_EQUAL, 0)
        def SMALLER_THAN_OR_EQUAL(self):
            return self.getToken(stlParser.SMALLER_THAN_OR_EQUAL, 0)
        def expression(self):
            return self.getTypedRuleContext(stlParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanFilter" ):
                listener.enterBooleanFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanFilter" ):
                listener.exitBooleanFilter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanFilter" ):
                return visitor.visitBooleanFilter(self)
            else:
                return visitor.visitChildren(self)


    class NegationContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(stlParser.FormulaContext,0)

        def NEGATE(self):
            return self.getToken(stlParser.NEGATE, 0)
        def MINUS(self):
            return self.getToken(stlParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegation" ):
                listener.enterNegation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegation" ):
                listener.exitNegation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegation" ):
                return visitor.visitNegation(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.FormulaContext)
            else:
                return self.getTypedRuleContext(stlParser.FormulaContext,i)

        def OR(self):
            return self.getToken(stlParser.OR, 0)
        def PIPELINE(self):
            return self.getToken(stlParser.PIPELINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class QuantitativeSignalContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def signalExpression(self):
            return self.getTypedRuleContext(stlParser.SignalExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantitativeSignal" ):
                listener.enterQuantitativeSignal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantitativeSignal" ):
                listener.exitQuantitativeSignal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantitativeSignal" ):
                return visitor.visitQuantitativeSignal(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.FormulaContext)
            else:
                return self.getTypedRuleContext(stlParser.FormulaContext,i)

        def AND(self):
            return self.getToken(stlParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class ImplicationContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.FormulaContext)
            else:
                return self.getTypedRuleContext(stlParser.FormulaContext,i)

        def ARROW(self):
            return self.getToken(stlParser.ARROW, 0)
        def SIGNLE_ARROW(self):
            return self.getToken(stlParser.SIGNLE_ARROW, 0)
        def DOUBLE_ARROW(self):
            return self.getToken(stlParser.DOUBLE_ARROW, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplication" ):
                listener.enterImplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplication" ):
                listener.exitImplication(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplication" ):
                return visitor.visitImplication(self)
            else:
                return visitor.visitChildren(self)


    class ScopeContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_BRACKET(self):
            return self.getToken(stlParser.OPEN_BRACKET, 0)
        def formula(self):
            return self.getTypedRuleContext(stlParser.FormulaContext,0)

        def CLOSE_BRACKET(self):
            return self.getToken(stlParser.CLOSE_BRACKET, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScope" ):
                listener.enterScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScope" ):
                listener.exitScope(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScope" ):
                return visitor.visitScope(self)
            else:
                return visitor.visitChildren(self)


    class EventuallyContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_CURLY(self):
            return self.getToken(stlParser.OPEN_CURLY, 0)
        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.ConstantContext)
            else:
                return self.getTypedRuleContext(stlParser.ConstantContext,i)

        def COMMA(self):
            return self.getToken(stlParser.COMMA, 0)
        def CLOSE_CURLY(self):
            return self.getToken(stlParser.CLOSE_CURLY, 0)
        def formula(self):
            return self.getTypedRuleContext(stlParser.FormulaContext,0)

        def SMALLER_THAN(self):
            return self.getToken(stlParser.SMALLER_THAN, 0)
        def LARGER_THAN(self):
            return self.getToken(stlParser.LARGER_THAN, 0)
        def DIAMOND(self):
            return self.getToken(stlParser.DIAMOND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventually" ):
                listener.enterEventually(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventually" ):
                listener.exitEventually(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventually" ):
                return visitor.visitEventually(self)
            else:
                return visitor.visitChildren(self)


    class UntilContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.FormulaContext)
            else:
                return self.getTypedRuleContext(stlParser.FormulaContext,i)

        def UNTIL(self):
            return self.getToken(stlParser.UNTIL, 0)
        def OPEN_CURLY(self):
            return self.getToken(stlParser.OPEN_CURLY, 0)
        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.ConstantContext)
            else:
                return self.getTypedRuleContext(stlParser.ConstantContext,i)

        def COMMA(self):
            return self.getToken(stlParser.COMMA, 0)
        def CLOSE_CURLY(self):
            return self.getToken(stlParser.CLOSE_CURLY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntil" ):
                listener.enterUntil(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntil" ):
                listener.exitUntil(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntil" ):
                return visitor.visitUntil(self)
            else:
                return visitor.visitChildren(self)



    def formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = stlParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_formula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = stlParser.BooleanFilterContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 18
                self.match(stlParser.OPEN_BRACKET)
                self.state = 19
                self.signalExpression(0)
                self.state = 20
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << stlParser.LARGER_THAN) | (1 << stlParser.LARGER_THAN_OR_EQUAL) | (1 << stlParser.SMALLER_THAN) | (1 << stlParser.SMALLER_THAN_OR_EQUAL) | (1 << stlParser.EQUALS) | (1 << stlParser.UNEQUALS))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 23
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 21
                    self.expression(0)
                    pass

                elif la_ == 2:
                    self.state = 22
                    self.signalExpression(0)
                    pass


                self.state = 25
                self.match(stlParser.CLOSE_BRACKET)
                pass

            elif la_ == 2:
                localctx = stlParser.NegationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 27
                _la = self._input.LA(1)
                if not(_la==stlParser.MINUS or _la==stlParser.NEGATE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 28
                self.formula(9)
                pass

            elif la_ == 3:
                localctx = stlParser.EventuallyContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 32
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [stlParser.SMALLER_THAN]:
                    self.state = 29
                    self.match(stlParser.SMALLER_THAN)
                    self.state = 30
                    self.match(stlParser.LARGER_THAN)
                    pass
                elif token in [stlParser.DIAMOND]:
                    self.state = 31
                    self.match(stlParser.DIAMOND)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 34
                self.match(stlParser.OPEN_CURLY)
                self.state = 35
                self.constant()
                self.state = 36
                self.match(stlParser.COMMA)
                self.state = 37
                self.constant()
                self.state = 38
                self.match(stlParser.CLOSE_CURLY)
                self.state = 39
                self.formula(8)
                pass

            elif la_ == 4:
                localctx = stlParser.AlwaysContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 44
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [stlParser.OPEN_SQUARE]:
                    self.state = 41
                    self.match(stlParser.OPEN_SQUARE)
                    self.state = 42
                    self.match(stlParser.CLOSE_SQUARE)
                    pass
                elif token in [stlParser.SQUARE]:
                    self.state = 43
                    self.match(stlParser.SQUARE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self.match(stlParser.OPEN_CURLY)
                self.state = 47
                self.constant()
                self.state = 48
                self.match(stlParser.COMMA)
                self.state = 49
                self.constant()
                self.state = 50
                self.match(stlParser.CLOSE_CURLY)
                self.state = 51
                self.formula(7)
                pass

            elif la_ == 5:
                localctx = stlParser.ScopeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 53
                self.match(stlParser.OPEN_BRACKET)
                self.state = 54
                self.formula(0)
                self.state = 55
                self.match(stlParser.CLOSE_BRACKET)
                pass

            elif la_ == 6:
                localctx = stlParser.QuantitativeSignalContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.signalExpression(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 78
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = stlParser.AndContext(self, stlParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 60
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 61
                        self.match(stlParser.AND)
                        self.state = 62
                        self.formula(7)
                        pass

                    elif la_ == 2:
                        localctx = stlParser.UntilContext(self, stlParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 63
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 64
                        self.match(stlParser.UNTIL)
                        self.state = 65
                        self.match(stlParser.OPEN_CURLY)
                        self.state = 66
                        self.constant()
                        self.state = 67
                        self.match(stlParser.COMMA)
                        self.state = 68
                        self.constant()
                        self.state = 69
                        self.match(stlParser.CLOSE_CURLY)
                        self.state = 70
                        self.formula(6)
                        pass

                    elif la_ == 3:
                        localctx = stlParser.OrContext(self, stlParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 72
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 73
                        _la = self._input.LA(1)
                        if not(_la==stlParser.PIPELINE or _la==stlParser.OR):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 74
                        self.formula(3)
                        pass

                    elif la_ == 4:
                        localctx = stlParser.ImplicationContext(self, stlParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 75
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 76
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << stlParser.ARROW) | (1 << stlParser.SIGNLE_ARROW) | (1 << stlParser.DOUBLE_ARROW))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 77
                        self.formula(2)
                        pass

             
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class SignalExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlParser.RULE_signalExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SignalAbsoluteContext(SignalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.SignalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PIPELINE(self, i:int=None):
            if i is None:
                return self.getTokens(stlParser.PIPELINE)
            else:
                return self.getToken(stlParser.PIPELINE, i)
        def signalExpression(self):
            return self.getTypedRuleContext(stlParser.SignalExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalAbsolute" ):
                listener.enterSignalAbsolute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalAbsolute" ):
                listener.exitSignalAbsolute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignalAbsolute" ):
                return visitor.visitSignalAbsolute(self)
            else:
                return visitor.visitChildren(self)


    class SignalExpressionScopeContext(SignalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.SignalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_BRACKET(self):
            return self.getToken(stlParser.OPEN_BRACKET, 0)
        def signalExpression(self):
            return self.getTypedRuleContext(stlParser.SignalExpressionContext,0)

        def CLOSE_BRACKET(self):
            return self.getToken(stlParser.CLOSE_BRACKET, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalExpressionScope" ):
                listener.enterSignalExpressionScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalExpressionScope" ):
                listener.exitSignalExpressionScope(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignalExpressionScope" ):
                return visitor.visitSignalExpressionScope(self)
            else:
                return visitor.visitChildren(self)


    class SignalProductContext(SignalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.SignalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(stlParser.ExpressionContext,0)

        def signalExpression(self):
            return self.getTypedRuleContext(stlParser.SignalExpressionContext,0)

        def STAR(self):
            return self.getToken(stlParser.STAR, 0)
        def FORWARD_SLASH(self):
            return self.getToken(stlParser.FORWARD_SLASH, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalProduct" ):
                listener.enterSignalProduct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalProduct" ):
                listener.exitSignalProduct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignalProduct" ):
                return visitor.visitSignalProduct(self)
            else:
                return visitor.visitChildren(self)


    class SignalSumContext(SignalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.SignalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(stlParser.ExpressionContext,0)

        def signalExpression(self):
            return self.getTypedRuleContext(stlParser.SignalExpressionContext,0)

        def PLUS(self):
            return self.getToken(stlParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(stlParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalSum" ):
                listener.enterSignalSum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalSum" ):
                listener.exitSignalSum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignalSum" ):
                return visitor.visitSignalSum(self)
            else:
                return visitor.visitChildren(self)


    class SignalSignalContext(SignalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.SignalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SIGNAL(self):
            return self.getToken(stlParser.SIGNAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalSignal" ):
                listener.enterSignalSignal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalSignal" ):
                listener.exitSignalSignal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignalSignal" ):
                return visitor.visitSignalSignal(self)
            else:
                return visitor.visitChildren(self)



    def signalExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = stlParser.SignalExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_signalExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = stlParser.SignalExpressionScopeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 84
                self.match(stlParser.OPEN_BRACKET)
                self.state = 85
                self.signalExpression(0)
                self.state = 86
                self.match(stlParser.CLOSE_BRACKET)
                pass

            elif la_ == 2:
                localctx = stlParser.SignalProductContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 88
                self.expression(0)
                self.state = 89
                _la = self._input.LA(1)
                if not(_la==stlParser.STAR or _la==stlParser.FORWARD_SLASH):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 90
                self.signalExpression(6)
                pass
